--- a/src/scss/components/_track-key.scss
+++ b/src/scss/components/_track-key.scss
@@ -53,3 +53,27 @@
   text-overflow: ellipsis;
   overflow: hidden;
 }
+
+.rt-track-key__toggle {
+  $icon-size: 20px;
+
+  overflow: hidden;
+  width: $icon-size;
+  height: $icon-size;
+  margin-right: 10px;
+  background: $react-timelines-text-color no-repeat center/10px;
+  color: transparent;
+
+  &:hover,
+  &:focus {
+    background-color: darken($react-timelines-text-color, 20%);
+  }
+}
+
+.rt-track-key__toggle--close {
+  background-image: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjQiIGhlaWdodD0iOCIgdmlld0JveD0iMTYgMjQgMjQgOCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48cGF0aCBkPSJNMTYgMjRoMjR2OEgxNnoiIGZpbGw9IiNmZmYiIGZpbGwtcnVsZT0iZXZlbm9kZCIvPjwvc3ZnPg==');
+}
+
+.rt-track-key__toggle--open {
+  background-image: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjQiIGhlaWdodD0iMjUiIHZpZXdCb3g9IjE2IDE1IDI0IDI1IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9IiNmZmYiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PHBhdGggZD0iTTMyIDE2djI0aC04VjE2eiIvPjxwYXRoIGQ9Ik0xNiAyNGgyNHY4SDE2eiIvPjwvZz48L3N2Zz4=');
+}
