feat: center content in timebar cells

--- a/src/scss/components/_timebar.scss
+++ b/src/scss/components/_timebar.scss
@@ -16,6 +16,7 @@
   line-height: 15px;
   display: flex;
   align-items: center;
+  justify-content: center;
 
   background-color: $react-timelines-timebar-cell-background-color;
   border-left: 1px solid $react-timelines-keyline-color;
