--- a/src/scss/components/_element.scss
+++ b/src/scss/components/_element.scss
@@ -10,10 +10,21 @@
 }
 
 .rt-element__content {
+  display: flex;
+  font-weight: bold;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   padding: 0 10px;
   overflow: hidden;
   white-space: nowrap;
-  font-weight: bold;
+  text-overflow: ellipsis;
+  height: 100%;
+}
+
+.rt-element__title__text {
+  overflow: hidden;
+  white-space: nowrap;
   text-overflow: ellipsis;
 }
 
