--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -16,7 +16,7 @@ $react-timelines-header-separator-color: $react-timelines-separator-dark-color !
 
 // Sidebar
 $react-timelines-sidebar-width: 240px !default;
-$react-timelines-sidebar-closed-offset: 40px;
+$react-timelines-sidebar-closed-offset: 0px;
 $react-timelines-sidebar-background-color: #fff !default;
 $react-timelines-sidebar-separator-color: $react-timelines-keyline-color !default;
 $react-timelines-sidebar-key-indent-width: 20px !default;
@@ -34,6 +34,7 @@ $react-timelines-element-spacing: $react-timelines-spacing !default;
 $react-timelines-marker-line-width: 2px !default;
 $react-timelines-marker-now-background-color: #ff007f !default;
 $react-timelines-marker-pointer-background-color: #888 !default;
+$react-timelines-marker-custom-background-color: #034ea2 !default;
 $react-timelines-marker-line-transparency: 0.5 !default;
 
 // Controls
